marketplace: fix word wrap for marketplace and network tab

--- a/client/src/commonStyles/base.scss
+++ b/client/src/commonStyles/base.scss
@@ -82,3 +82,7 @@ strong {
 svg {
   display: inline-block;
 }
+
+.no-wrap {
+  white-space: nowrap;
+}
